# agentic-python-fixer

./: .gitignore  README.md  main.py  pyproject.toml
agent/: config.py  docker_sandbox.py  graph.py  langgraph_react_loop.py  logging.py  parsers.py  patches.py  prompts.py  react_loop.py  tools.py
benchmark/: benchmark_results.json
docker/: sandbox.Dockerfile
eval/: evaluate.py  humanevalfix_loader.py  scorer.py  task_workspace.py
notebooks/: Model_Performance_Analysis.ipynb
reports/: openai_gpt-4o-mini_stratified_0-35.json  openai_gpt-4o-mini_stratified_0-35_34268dc1.json  openai_gpt-4o-mini_stratified_0-5.json  openai_gpt-4o-mini_stratified_0-5_7383c822.json  qwen3_1-7b_huggingface_stratified_0-35.json  qwen3_1-7b_huggingface_stratified_0-5_7383c822.json
scripts/: run_all.py  run_one.py
tests/: test_humanevalfix_loader.py  test_parsers.py  test_patches.py  test_react_loop.py  test_sandbox.py  test_tools.py
