[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-python-fixer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.42.0",
    "accelerate>=0.33.0",
    "datasets>=2.20.0",
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "pytest>=8.3.0",
    "typer>=0.12.0",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "unidiff>=0.7.5",
    "matplotlib>=3.6",
    "psutil>=6.0.0",
    "portalocker>=2.10.1",
    "tiktoken>=0.7.0", # optional token counting
    "bitsandbytes>=0.43.1; platform_system!='Windows'", # if quantizing
    "tqdm>=4.66.0",
    "openai>=1.40.0",
    "black>=24.3.0",
    "notebook>=7.4.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent", "eval", "scripts"]
